--- a/src/components/animal_info/info.css
+++ b/src/components/animal_info/info.css
@@ -1,7 +1,22 @@
 .content-container {
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  font-size: 2em
+  font-size: 2em;
+}
+
+.img-container {
+  height: 500px;
+  width: 500px;
+}
+
+.img {
+  height: 100%;
+}
+
+.info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
