--- a/src/components/animal_info_picture/style.css
+++ b/src/components/animal_info_picture/style.css
@@ -1,9 +1,12 @@
 .active-img-container {
   width: 400px;
+  height: 600px;
+  display: flex;
 }
 
 .active-img {
   width: 100%;
+  align-self: center;
 }
 
 .picture-container {
@@ -17,18 +20,19 @@
 }
 
 .img-thumbnail-container {
-  width: 150px;
+  height: 50%;
+  margin: 10px 10px 0 0;
 }
 
 .img-thumbnail {
-  width: 100%;
-  margin: 5px 5px;
+  height: 100%;
 }
 
 .thumbnail-row {
   display: flex;
-  width: 400px;
+  width: 100%;
+  height: 20%;
   flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
