--- a/src/components/animal_info_picture/style.css
+++ b/src/components/animal_info_picture/style.css
@@ -1,11 +1,15 @@
 .active-img-container {
-  width: 400px;
-  height: 600px;
+  width: 600px;
+  height: 85%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px;
 }
 
 .active-img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   align-self: center;
 }
 
@@ -19,7 +23,7 @@
 }
 
 .img-thumbnail-container {
-  height: 50%;
+  height: 75%;
   margin: 10px 10px 0 0;
 }
 
@@ -30,7 +34,7 @@
 .thumbnail-row {
   display: flex;
   width: 100%;
-  height: 20%;
+  height: 15%;
   flex-direction: row;
   align-items: center;
   justify-content: center;
