--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,16 @@
-.home-main {
-  margin: auto;
+.home-main-container {
+  margin: 40px auto;
   width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.text-left {
+  width: 40%;
+  margin-right: 10%;
+}
+
+.text-right {
+  width: 40%;
 }
