--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,22 @@ body {
   background: #f7f7f7;
   color: #333;
   font-family: 'Open Sans', sans-serif;
-  padding:0;
+  padding: 0;
   margin: 0;
+  height: 100%;
+  position: relative;
+}
+
+.main {
+  min-height: 100vh;
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 200px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
