--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,15 +7,22 @@
 }
 
 .text-left {
-  width: 40%;
-  margin-right: 10%;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 25px;
+  border-right: 2px solid #004990;
 }
 
 .text-right {
-  width: 40%;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .location-map {
-  width: 80%;
+  width: 400px;
   margin: 0 auto;
 }
